Update component layout and styling Forgot to commit but fixed a bit. This ai shit is cool tho The main changes in this commit are updates to the layout and styling of various components in the application. Some unnecessary and redundant CSS codes have been removed and the application's theme has been switched to dark mode. Also, the input fields related to `ElectricEngine` and `GasEngine` had their behavior changed, and they are now disabled if the type is either of them.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
   width: 100%;
   //margin: 10vh 0 0;
-  height: 70vh;
+  height: 80vh;
   padding:0 5%;
 
  // background-color: #1a1a1a;
