--- a/src/app/data-dashboard/data-dashboard.component.scss
+++ b/src/app/data-dashboard/data-dashboard.component.scss
@@ -5,53 +5,7 @@
   height: 95%;
 }
 
-app-otype {
-  transition: 250ms;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
 
-  //@include card-styles($chosenPrimary-color, $chosenBackgroundColor);
-  background-color: $chosenSecondary-color;
-  color: $tertiary;
-  //padding: $spacing-small;
-  text-align: center;
-
-  &:hover {
-    background-color: $tertiary;
-    color: $vibrantPrimary;
-  }
-
-  .wrap {
-    transition: 250ms;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    /*background-color: red;*/
-  }
-
-  .wrap:hover {
-    background-color: #1a1c1e;
-    color: #99a4d0;
-  }
-
-  .selected {
-    width: 100%;
-    height: 100%;
-    background-color: #20639B;
-    color: white;
-  }
-
-  .selected:hover {
-    background-color: #20639B;
-  }
-}
 
 .typesGrid {
   //@include responsive-grid(5em, 10em, auto, 0); // If you don't pass any argument, it will use the default values
@@ -60,28 +14,34 @@ app-otype {
   //grid-template-rows: fit-content(100%);
   height: 100%;
   width: 100%;
-
+  border: 4px solid transparent;
+  //background: linear-gradient(180deg,  $chosenBackgroundColor 0%, $chosenPrimary-color 100%);
+  //background: linear-gradient(180deg,  $chosenBackgroundColor 0%, $chosenPrimary-color 100%);
+  //background-clip: border-box;
   .tile {
     display: flex;
     justify-content: center;
     align-items: center;
     //@include card-styles($chosenPrimary-color, $chosenBackgroundColor);
     width: 100%;
-    background-color: $chosenSecondary-color;
+    background-color: transparent;
     color: $chosenPrimary-color;
     //padding: $spacing-small;
     text-align: center;
     height: 100%;
   }
-
-  padding-bottom: 1ch;
+  //padding-bottom: 1ch;
 }
 
 .dataGrid {
   @include responsive-grid(10em, 15em, 10em, .25ch);
-  //@include gradBlur();
-
-
+  @include gradBlur();
+  @include clipPathBorder(.2em);
+  &:before{
+    inset: unset;
+    z-index: 5;
+    backdrop-filter: blur(38px) brightness(2.5) contrast(1.5)
+  }
   justify-content: space-evenly;
   //position: relative;
   //overflow: auto;
@@ -108,7 +68,9 @@ app-otype {
 }
 
 .objTile {
+  position: relative;
 
+  z-index: 2;
   @include insetShadow(50, 10, 0, .5);
   border-radius: 1ch;
   transition: 225ms;
@@ -148,13 +110,13 @@ app-otype {
 }
 
 #deleteButt {
-  background-color: #363636;
-  color: #ff2a2a;
+  background-color: #f5927c;
+  color:  $chosenFont-color;
 }
 
 #deleteButt:hover {
-  background-color: #f5927c;
-  color: #363636;
+  background-color:$chosenFont-color ;
+  color:#ff2a2a ;
 }
 
 #db {
@@ -166,6 +128,6 @@ app-otype {
   position: relative;
   width: 100%;
   height: 100%;
-
+  overflow: hidden;
   //@include testBlur();
 }
